--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -206,7 +206,7 @@ background: #46178F;
   background-color: transparent;
   color: var(--white);
   font-family: var(--font-family-helvetica-bold);
-  font-size: var(--font-size-m);
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
   height: auto;
@@ -257,7 +257,7 @@ background: #46178F;
   background-color: transparent;
   color: #0000008a;
   font-family: var(--font-family-roboto);
-  font-size: var(--font-size-m);
+  font-size: 20px;
   font-style: normal;
   font-weight: 500;
   height: auto;
@@ -308,7 +308,7 @@ background: #46178F;
   background-color: transparent;
   color: var(--white);
   font-family: var(--font-family-sf_pro_display-medium);
-  font-size: var(--font-size-m);
+  font-size: 20px;
   font-style: normal;
   font-weight: 500;
   height: auto;
