--- a/my-app/src/Categories.css
+++ b/my-app/src/Categories.css
@@ -50,7 +50,7 @@
   background-color: transparent;
   color: var(--black);
   font-family: var(--font-family-montserrat);
-  font-size: var(--font-size-l);
+  font-size: 36px;
   font-style: normal;
   font-weight: 600;
   height: auto;
